--- a/src/styles/Logo.scss
+++ b/src/styles/Logo.scss
@@ -1,11 +1,17 @@
 .first-letter {
     color: yellow;
+    background-clip: text;
+    background-image: linear-gradient(90deg, rgba(255,229,101,1) 0%, rgba(255,200,32,1) 41%, rgba(255,171,0,1) 100%);
+    -webkit-text-fill-color: transparent;
     font-size: 100px;
     font-family: 'Roboto';
 }
 
 .second-letter {
+    background-image: linear-gradient(90deg, rgba(255,229,101,1) 0%, rgba(255,200,32,1) 41%, rgba(255,171,0,1) 100%);
+    background-clip: text;
     color: yellow;
+    -webkit-text-fill-color: transparent;
     font-size: 100px;
     font-family: 'Roboto';
 }
@@ -26,5 +32,5 @@
 .big-container {
     position: absolute;
     // left: 50%;
-    top: 45dvh;
+    top: 42dvh;
 }
