--- a/src/styles/css/Logo.css
+++ b/src/styles/css/Logo.css
@@ -1,12 +1,22 @@
 @charset "UTF-8";
 .first-letter {
   color: yellow;
+  -webkit-background-clip: text;
+          background-clip: text;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgb(255, 229, 101)), color-stop(41%, rgb(255, 200, 32)), to(rgb(255, 171, 0)));
+  background-image: linear-gradient(90deg, rgb(255, 229, 101) 0%, rgb(255, 200, 32) 41%, rgb(255, 171, 0) 100%);
+  -webkit-text-fill-color: transparent;
   font-size: 100px;
   font-family: "Roboto";
 }
 
 .second-letter {
+  background-image: -webkit-gradient(linear, left top, right top, from(rgb(255, 229, 101)), color-stop(41%, rgb(255, 200, 32)), to(rgb(255, 171, 0)));
+  background-image: linear-gradient(90deg, rgb(255, 229, 101) 0%, rgb(255, 200, 32) 41%, rgb(255, 171, 0) 100%);
+  -webkit-background-clip: text;
+          background-clip: text;
   color: yellow;
+  -webkit-text-fill-color: transparent;
   font-size: 100px;
   font-family: "Roboto";
 }
@@ -29,5 +39,5 @@
 
 .big-container {
   position: absolute;
-  top: 45dvh;
+  top: 42dvh;
 }
