--- a/src/styles/BasicPage.scss
+++ b/src/styles/BasicPage.scss
@@ -1,5 +1,12 @@
 .page {
     background-color: #99958C;
-    height: 100%;
-    width: 100%;
+    height: 100dvh;
+    width: 100dvw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 100px;
+    font-weight: 500;
+    font-family: 'Roboto';
+    text-wrap: balance;
 }
