--- a/src/styles/css/BasicPage.css
+++ b/src/styles/css/BasicPage.css
@@ -1,5 +1,18 @@
 .page {
   background-color: #99958C;
-  height: 100%;
-  width: 100%;
+  height: 100dvh;
+  width: 100dvw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 100px;
+  font-weight: 500;
+  font-family: "Roboto";
+  text-wrap: balance;
 }
